# test-c

./: CMakeLists.txt  README.md  first.ps1  main.cpp  main.pro  test_qtmqtt.cpp  vcpkg.json
.github/workflows/: main.yml  release.yml  t.yml
